# TEG_2025

./: README.md  tools.txt
src/1. Intro/: 1_llm_basics.py  2_Your_own_chatbot.py  notebook.ipynb
src/2. Models/2. LLMs/: .env.example  1. OpenAI - analyze the response object.py  2. Claude - analyze the response object.py  3. Different models with LangChain.py  README.md  notebook_2.ipynb  pyproject.toml
src/3. Retrieval Augmented Generation/: .env.example  README.md  notebook_1.ipynb  notebook_2.ipynb  notebook_3.ipynb  pyproject.toml
src/3. Retrieval Augmented Generation/01_basic_rag/: 1. minimal_rag.py  2. minimal_rag_with_chunking.py  README.md
src/3. Retrieval Augmented Generation/02_vector_stores/: 1_in_memory.py  2_chroma_vectorestore.py  3_faiss_vectorestore.py  README.md
src/3. Retrieval Augmented Generation/03_document_loading/: 1_text_files.py  2_pdf_loading.py  3_web_sources.py  README.md
src/3. Retrieval Augmented Generation/04_advanced_retrieval/: 1_metadata_filtering.py  2_hybrid_search.py  3_query_expansion.py  4_reranking.py  README.md
src/3. Retrieval Augmented Generation/05_rag_evaluation/: 1. RAGAS_Naive_RAG.py  README.md
src/3. Retrieval Augmented Generation/06_GraphRAG/: 0_setup.py  1_generate_data.py  2_data_to_knowledge_graph.py  3_query_knowledge_graph.py  4_naive_rag_cv.py  5_compare_systems.py  README.md  compose.yml  docker-compose.yml  end_session.sh  start_session.sh
src/5. Tools and Agents/: notebook.ipynb
src/6. MCP/: 1.mcp_demo - interactive copy.py  2.mcp_demo - CLI.py  notebook.ipynb
src/6. MCP/arxiv_server/: arxiv.py
(+82 files in other folders)
