[project]
name = "2-2-llms"
version = "0.1.0"
description = "Basic interactions with LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.83.0",
    "langchain-anthropic>=1.3.3",
    "langchain-openai>=1.1.10",
    "langchain-ollama>=1.0.1",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
]
